<resources>
    <string name="app_name">Practica1</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Reportes</string>
    <string name="nav_header_subtitle">Creacion y Animacion de Figuras Geometricas</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="colores_usados">Colores usados</string>
    <string name="figuras_usadas">Figuras usadas</string>
    <string name="errores">Errores</string>
    <string name="edit_message">Escribe tus acciones</string>
    <string name="button_send">Compilar</string>
    <string name="report_ocurrencias">Ocurrencias de operadores aritmeticos</string>
    <string name="report_animacion">Animaciones realizadas</string>
    <string name="abrirDrawe">abrimos el drawer</string>
    <string name="cerrarDrawer">cerramos el drawer</string>
    <string name="report_ocurrencia_short">Ocurrencia de Operadores</string>
    <item type="id" name="fondo"/>
</resources>