<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_colores"
            android:icon="?attr/actionModePasteDrawable"
            android:checked="false"
            android:title="@string/colores_usados" />
        <item
            android:id="@+id/nav_figuras"
            android:icon="?attr/actionModePasteDrawable"
            android:checked="false"
            android:title="@string/figuras_usadas" />
        <item
            android:id="@+id/report_animaciones"
            android:icon="?attr/actionModePasteDrawable"
            android:checked="false"
            android:title="@string/report_animacion" />
        <item
            android:id="@+id/report_ocurrencias"
            android:icon="?attr/actionModePasteDrawable"
            android:checked="false"
            android:title="@string/report_ocurrencias" />
        <item
            android:id="@+id/nav_Errores"
            android:icon="?attr/actionModePasteDrawable"
            android:checked="false"
            android:title="@string/errores" />
    </group>
</menu>